Revised chapter 1 [UNFINISHED]
Still lacking:
- Vague statement on research objective "To determine which appropriate
color equivalent to display to the user based on its corresponding
mapping"
- Sir Sol's comment on 2nd paragraph: outdated reference (1988).
- Sir Sol's comments on cochlear implants. Reference, benefits, cost,
issues.
- Sir sol's comment on Overview: "So? It's dangling? What are the
issues?? What's the problem?"

--- a/ourreferences.bib
+++ b/ourreferences.bib
@@ -44,7 +44,7 @@
 
 @book{ oyer:1976:CHH,
 	author = { Oyer, Herbert J. },
-	title = { Communication for the hearing handicapped : an international perspective / edited by Herbert J. Oyer },
+	title = { Communication for the hearing handicapped : An international perspective },
 	publisher = { University Park Press Baltimore },
 	year = { 1976 },
 }
