--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -8,15 +8,17 @@ This chapter discusses the overview of the current state of technology, research
 
 Hearing impairment is the inability to hear, and it may affect one's development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. Having the ability to hear affects one's development as it is a tool for sending signals to the brain, helping one hear. An extremely deaf child may find it immensely difficult to learn speech and language without auditory feedback \cite{bernstein:1988:STA}.
 
-Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says “I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication” \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the deaf communicate \cite{connor:1971:SDC}.
+\begin{comment}
+Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
+\end{comment}
 
 One problem a hearing-impaired student going under therapy may undergo is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
 
-Early speech training systems were implemented using a lipreading-technique \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
+Early speech training systems were implemented using a lipreading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
-Heracleous et al. \citeyear{heracleous:2010:CSA} mentions that visual information is commonly practiced to aid in speech perception. The first computer-based speech training aid called the Bolt, Beranek, and Newman experimental system was developed. The software was designed to grasp the attention of children wherein they play games to learn. One of the games was a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{heracleous:2010:CSA}.
+Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude—the degree of change—on the x-axis \cite{bernstein:1988:STA}.
 
-Currently, the best way for a hearing impaired person to learn how to speak is by planting an electronic device called the Cochlear Implant. It somehow functions as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damage or there are less hair cells, cochlear implant stimulates the cochlear nerves without going the the hair cells anymore. A person with the cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
+Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with the cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
 
 \section{Research Objectives}
 \label{sec:researchobjectives}
@@ -24,16 +26,15 @@ Currently, the best way for a hearing impaired person to learn how to speak is b
 \subsection{General Objective}
 \label{sec:generalobjective}
 
-To provide scalar feedback for assisting people with hearing impairment by implementing a training system that teaches them to speak vowel sounds through the use of self-organizing maps (SOMs) combined with regression models.
+To provide scalar feedback for assisting people with hearing impairment by implementing a training system that teaches them to speak vowel sounds.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
 \begin{enumerate}
 \item To collect and compare audio data from people both with and without hearing impairment
-\item To provide scalar feedback with the use of colors
 \item To determine which appropriate color equivalent to display to the user based on its corresponding mapping
-\item To create a speech training software by synthesizing scalar feedback and self-organizing maps (SOM) developed by Natalie Agustin \citeyear{agustin:2014:SOM}
+\item To create a speech training software by synthesizing scalar feedback and Self-Organizing Maps (SOM) developed by Natalie Agustin \citeyear{agustin:2014:SOM}
 % \item To synthesize the result of the scalar feedback and self-organizing maps of Natalie Agustin
 \end{enumerate}
 
@@ -47,5 +48,5 @@ The speech training software will be written in Java, and must run on a desktop 
 \section{Significance of the Research}
 \label{sec:significance}
 
-It will assist the deaf in learning the pronunciations of vowel sounds accurately.
-The thesis may serve as a basis for future implementations of deaf speech training systems which may cater not only vowels, but also consonants.
+It will assist the Deaf in learning the pronunciations of vowel sounds accurately.
+The thesis may serve as a basis for future implementations of Deaf speech training systems which may cater not only vowels, but also consonants.
