Added Review of Related Software

--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -22,12 +22,12 @@ Speech Training Systems were developed in order to represent feedback to people 
 Strategies are often required in implementing such systems, especially to deaf children, who necessitates more efficient methods of instructions compared to hearing children. Speech training is efficient if it would be able to allow children to imitate invisible speech articulations, which could not be perceived properly by visual aids \cite{oster:1996:cac}. Oster \citeyear{oster:1996:cac} suggests that for a speech training system to considered efficient and to able to amplify the any possibility for a child to learn, a number of requirements must be achieved:
 
 \begin{itemize}
-\item “Clear instructions and pedagogical manuals must be created and made available for use with different groups of children.
+\item "Clear instructions and pedagogical manuals must be created and made available for use with different groups of children.
 \item The visual feedback of the child’s voice and articulation should be shown immediately and without delay.
 \item The aid must be acceptable to the therapist as well as to the child, which means that the aid must be attractive, interesting, easily comprehensible, easy to handle, and motivating.
 \item The visual pattern must be natural, logical and easily understandable. This means that training parameters as, e.g., pitch could be shown vertically as pitch variations occur; intensity through the size of an object that becomes larger as a sound becomes louder and smaller as a sound becomes softer; intonation and stress through a continuous red curve; duration could be shown horizontally and voicing through a relationship between voicing and the change of a colour.
 \item The aid should provide a contrastive training, that is, the correct model of the therapist and the deviant production of the child are shown simultaneously and compared with each other.
-\item The aid should provide a flexible, individual, and structural speech and voice training and give an objective evaluation of the child’s training results.” \cite{oster:1996:cac}
+\item The aid should provide a flexible, individual, and structural speech and voice training and give an objective evaluation of the child’s training results." \cite{oster:1996:cac}
 \end{itemize}
 
 A speech training system that provides visual aid will help a hearing-impaired person evaluate and correct his utterance or pronunciation \cite{wankhede:2014:dvs}. Wankhede mentions that how the feedback is presented also affects how hearing-impaired children may improve their pronunciations. The visual feedback must also be shown immediately on the computer screen without delay to prevent confusion to the child. Some children may find some speech training aids as difficult to understand, unnatural, delayed, unattractive, and unmotivating to the children. For evaluation of the speech training aid, it should have the acceptance of a speech therapist and as well as of a child, meaning that the system should be appealing, presentable, easy to use, and motivating \cite{wankhede:2014:dvs}.
@@ -40,4 +40,12 @@ Self-organizing map (SOM) is an artificial neural network that discovers pattern
 
 SOMs have neurons or nodes in which each node/neuron has a weight that is similar in dimension as the input and these nodes are then arranged in the map to from a hexagonal or rectangular grid, connecting them to each input node \cite{agustin:2014:SOM}.
 
-At the start, the neurons are given random weight values. This is called the initialization phase. The next step of the process is determining which neuron is closest to the input via its given weight value. “The weights of the winning neuron and neurons close to it in the SOM lattice are adjusted towards the input vector” \cite{chandar:2013:srs}. This is called the competition phase \cite{agustin:2014:SOM}. Lastly, the weight of the winning neurons and its neighbors are adjusted in relation to the input pattern in this third phase called adaptation phase, hence, the SOM is created.
+At the start, the neurons are given random weight values. This is called the initialization phase. The next step of the process is determining which neuron is closest to the input via its given weight value. "The weights of the winning neuron and neurons close to it in the SOM lattice are adjusted towards the input vector" \cite{chandar:2013:srs}. This is called the competition phase \cite{agustin:2014:SOM}. Lastly, the weight of the winning neurons and its neighbors are adjusted in relation to the input pattern in this third phase called adaptation phase, hence, the SOM is created.
+
+\section{Review of Related Software}
+
+\subsection{SpeechViewer}
+SpeechViewer III is a software developed by IBM to help the hearing-impaired enhance their vocal skills. It transforms spoken words and sounds into imaginative graphics \cite{speechville:nd:slp}. "SpeechViewer III uses visual and auditory feedback to analyse and improve the speech skills of people who have speech, language or hearing disorders" \cite{kennedy:nd:spv}. The student must be facilitated by a professional in guiding him or her in speech training. The software provides a dozen exercises for the user and also provides immediate and clear feedback. It also gives interest for children as the software gives animated rewards during successful responses.
+
+\subsection{Speech Therapy 5}
+"Speech Therapy uses over 70 voice-activated video games to provide real-time reinforcement of a client's attempts to produce changes in pitch, loudness, voiced and unvoiced phonation, voicing onset, maximum phonation time, sound and vowel tracking"\cite{drspeech:nd:st5}. The software is aimed for the development of children, wherein they play interactive games. Immediate animated feedback is displayed to show how well a child performs.
