--- a/ourreferences.bib
+++ b/ourreferences.bib
@@ -103,3 +103,24 @@
 	year = 2012,
 	howpublished = "\url{http://www.sutd.edu.sg/cmsresource/idc/papers/2012_The_Haptic_Chair_as_a_Speech_Training_Aid_for_the_Deaf.pdf}",
 }
+
+@misc{kennedy:nd:spv,
+  title = {Speech Viewer 3 Review},
+  author = {Gerry Kennedy},
+  howpublished = {\url{http://www.spectronics.com.au/article/3073}},
+  note = {Accessed March 16, 2015}
+}
+
+@misc{speechville:nd:slp,
+	title = {Software: for Speech-language Pathology},
+	author = {Speechville},
+	howpublished = {\url{http://www.speechville.com/speech-therapy/software-slps.html}},
+	note = {Accessed March 16, 2015}
+}
+
+@misc{drspeech:nd:st5,
+	title = {Speech Therapy 5},
+	author = {Tiger DRS, Inc.},
+	howpublished = {\url{http://www.drspeech.com/SpeechTherapy5.html}},
+	note = {Accessed March 16, 2015}
+}
