--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -1,52 +1,56 @@
 \chapter{Research Description}
 \label{sec:researchdesc}
 
-This chapter discusses the overview of the current state of technology, research objectives, scope and limitations of the research, and the significance of the research.
+This chapter discusses the overview of the current state of technology, research objectives, scope and limitations of the research, and significance of the research.
 
 \section{Overview of the Current State of Technology}
 \label{sec:overview}
 
-Hearing impairment is the inability to hear, and it may affect one's development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. Having the ability to hear affects one's development as it is a tool for sending signals to the brain, helping one hear. An extremely deaf child may find it immensely difficult to learn speech and language without auditory feedback \cite{bernstein:1988:STA}.
+Hearing impairment is the inability to hear, and it may affect one's development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. An extremely deaf child may find it immensely difficult to learn speech and language without auditory feedback \cite{bernstein:1988:STA}.
 
 \begin{comment}
 Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
 \end{comment}
 
-One problem a hearing-impaired student going under therapy may undergo is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
+One problem of a hearing-impaired student is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
 
-Early speech training systems were implemented using a lipreading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
+Early speech training systems were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
 Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude—the degree of change—on the x-axis \cite{bernstein:1988:STA}.
 
-Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with the cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
-
+Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells, or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with a cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
+					
+Computer-based speech therapy systems that have been implemented are mostly product-oriented, providing an analysis of the input of the user and the final result. The method, however, does not provide the information of how the sound should be articulated. The shortcoming of these systems are brought upon by giving visual representations in real time i.e. game-like visualizations and speech pictures \cite{oster:2006:cbs}.
+									
+Moreover, in training hearing-impaired children, the most preferred feedback is through visual modality. This allows the children see the motor gestures that were non-visible, assisting them in developing their speech gestures. The problem that this method posed was that it were seldom evaluated in a pedagogical programme. Often, the visual aids presented was difficult to understand, unnatural, delayed, unattractive, and had no motivational impact on the children \cite{oster:2006:cbs}.
+				
 \section{Research Objectives}
 \label{sec:researchobjectives}
 
 \subsection{General Objective}
 \label{sec:generalobjective}
 
-To provide scalar feedback for assisting people with hearing impairment by implementing a training system that teaches them to speak vowel sounds.
+To implement a speech training software that provides visual feedback which assists people with hearing impairment to learn how to speak vowel sounds.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
 \begin{enumerate}
 \item To collect and compare audio data from people both with and without hearing impairment
+\item To determine how to motivate the users in using the speech training system
 \item To determine which appropriate color equivalent to display to the user based on its corresponding mapping
-\item To create a speech training software by synthesizing scalar feedback and Self-Organizing Maps (SOM) developed by Natalie Agustin \citeyear{agustin:2014:SOM}
 % \item To synthesize the result of the scalar feedback and self-organizing maps of Natalie Agustin
 \end{enumerate}
 
 \section{Scope and Limitations of the Research}
 \label{sec:scopelimitations}
 
-For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and acknowledges the vowels pronounced by the user.
-The speech training software will only acknowledge vowels. It should also acknowledge vowels with accents in order to provide more accurate feedback to the user.
-The speech training software will be written in Java, and must run on a desktop platform.
+For the implementation of the speech training system, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation—the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
+The speech training system will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
+The speech training system will run on a desktop platform, as desktop computers are accessible and widely-used.
 
 \section{Significance of the Research}
 \label{sec:significance}
 
-It will assist the Deaf in learning the pronunciations of vowel sounds accurately.
+The thesis will assist the Deaf in learning the pronunciations of vowel sounds accurately. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
 The thesis may serve as a basis for future implementations of Deaf speech training systems which may cater not only vowels, but also consonants.
