Chapter 3 + Abstract + Revised Chaps. 1-2

--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -14,7 +14,7 @@ Throughout the years, man has tried to find ways to help the hearing-handicapped
 
 One problem of a hearing-impaired student is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
 
-Early speech training systems were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
+Early speech training software were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
 Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude—the degree of change—on the x-axis \cite{bernstein:1988:STA}.
 
@@ -36,21 +36,24 @@ To implement a speech training software that provides visual feedback which assi
 \label{sec:specificobjectives}
 
 \begin{enumerate}
-\item To collect and compare audio data from people both with and without hearing impairment
-\item To determine how to motivate the users in using the speech training system
-\item To determine which appropriate color equivalent to display to the user based on its corresponding mapping
-% \item To synthesize the result of the scalar feedback and self-organizing maps of Natalie Agustin
+\item To study how previous and current speech training programs work
+\item To find schools for the hearing-impaired who may assist the group with the research
+\item To identify and compare different methods of visual feedback in speech training systems
+\item To select the optimal visual feedback method based on usability and effectiveness
+\item To review Natalie Agustin's \citeyear{agustin:2014:SOM} mapping software which will be integrated into the speech training software
+\item To determine the different methods in motivating the hearing-impaired in using the speech training software
+\item To evaluate the accuracy of the speech training software's visual feedback based on the user's voice input
 \end{enumerate}
 
 \section{Scope and Limitations of the Research}
 \label{sec:scopelimitations}
 
-For the implementation of the speech training system, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation—the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
-The speech training system will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
-The speech training system will run on a desktop platform, as desktop computers are accessible and widely-used.
+For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation—the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
+The speech training software will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
+The speech training software will run on a desktop platform, as desktop computers are accessible and widely-used.
 
 \section{Significance of the Research}
 \label{sec:significance}
 
 The thesis will assist the Deaf in learning the pronunciations of vowel sounds accurately. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
-The thesis may serve as a basis for future implementations of Deaf speech training systems which may cater not only vowels, but also consonants.
+The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
