--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -9,7 +9,7 @@
 \chapter{Review of Related Literature}
 \label{sec:relatedlit}
 
-This chapter discusses studies for an effective speech training system and different software that have been distributed and used by the hearing-impaired in order to learn how to speak.
+This chapter discusses studies for an effective speech training software and different software that have been distributed and used by the hearing-impaired in order to learn how to speak.
 
 \section{Review of Related Paper}
 
@@ -19,7 +19,7 @@ Speech is not innate for children who are deaf or with a profound hearing loss a
 
 Speech Training Systems were developed in order to represent feedback to people with profound hearing impairment in a visually appealing manner \cite{oster:2006:cbs}. Other implementations of software address this solution by introducing gamifying elements to allow the software to be used by the direct users or under the assistance of teachers. Methods such as spectrographs, dating since 1947, have also been used to teach speech to children \cite{javkin:1993:msa}. On the other hand, tactile aid focuses on somatosensation; by using vibrators at various parts of the body to indicate numerous elements of speech such as voicing or nasalization \cite{wankhede:2014:dvs}.
 
-Strategies are often required in implementing such systems, especially to deaf children, who necessitates more efficient methods of instructions compared to hearing children. Speech training is efficient if it would be able to allow children to imitate invisible speech articulations, which could not be perceived properly by visual aids \cite{oster:1996:cac}. Oster \citeyear{oster:1996:cac} suggests that for a speech training system to considered efficient and to able to amplify the any possibility for a child to learn, a number of requirements must be achieved:
+Strategies are often required in implementing such systems, especially to Deaf children, who necessitates more efficient methods of instructions compared to hearing children. Speech training is efficient if it would be able to allow children to imitate invisible speech articulations, which could not be perceived properly by visual aids \cite{oster:1996:cac}. Oster \citeyear{oster:1996:cac} suggests that for a speech training system to considered efficient and to able to amplify the any possibility for a child to learn, a number of requirements must be achieved:
 
 \begin{itemize}
 \item "Clear instructions and pedagogical manuals must be created and made available for use with different groups of children.
@@ -30,9 +30,9 @@ Strategies are often required in implementing such systems, especially to deaf c
 \item The aid should provide a flexible, individual, and structural speech and voice training and give an objective evaluation of the child’s training results." \cite{oster:1996:cac}
 \end{itemize}
 
-A speech training system that provides visual aid will help a hearing-impaired person evaluate and correct his utterance or pronunciation \cite{wankhede:2014:dvs}. Wankhede mentions that how the feedback is presented also affects how hearing-impaired children may improve their pronunciations. The visual feedback must also be shown immediately on the computer screen without delay to prevent confusion to the child. Some children may find some speech training aids as difficult to understand, unnatural, delayed, unattractive, and unmotivating to the children. For evaluation of the speech training aid, it should have the acceptance of a speech therapist and as well as of a child, meaning that the system should be appealing, presentable, easy to use, and motivating \cite{wankhede:2014:dvs}.
+A speech training software that provides visual aid will help a hearing-impaired person evaluate and correct his utterance or pronunciation \cite{wankhede:2014:dvs}. Wankhede mentions that how the feedback is presented also affects how hearing-impaired children may improve their pronunciations. The visual feedback must also be shown immediately on the computer screen without delay to prevent confusion to the child. Some children may find some speech training aids as difficult to understand, unnatural, delayed, unattractive, and unmotivating to the children. For evaluation of the speech training aid, it should have the acceptance of a speech therapist and as well as of a child, meaning that the system should be appealing, presentable, easy to use, and motivating \cite{wankhede:2014:dvs}.
 
-Aside from visual feedback that are used as aid in speech training system, there is also another type of feedback being used as aid for the hearing-impaired people in speech training - vibrotactile feedback. The Haptic Chair is a project developed by Suranga Nanayakkara, Lonce Wyse, and Elizabeth A. Taylor, to help deaf people in speech training by the use of sending vibrotactile feedback to several parts of the body such as palm and fingers \cite{nanaya:2012:hap}.
+Aside from visual feedback that are used as aid in speech training software, there is also another type of feedback being used as aid for the hearing-impaired people in speech training - vibrotactile feedback. The Haptic Chair is a project developed by Suranga Nanayakkara, Lonce Wyse, and Elizabeth A. Taylor, to help deaf people in speech training by the use of sending vibrotactile feedback to several parts of the body such as palm and fingers \cite{nanaya:2012:hap}.
 
 \subsection{Self-Organizing Maps (SOMs)}
 
