--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -7,30 +7,39 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Research Methodology}
-This chapter lists and discusses the specific steps and activities that will be performed by the proponent to accomplish the project. 
-The discussion covers the activities from pre-proposal to Final Thesis Writing.  It also includes an initial discussion on the theoretical
-framework to be followed.
+This chapter discusses the methodology to be followed for the entire duration of this research.
 
 \section{Research Activities}
-Research activities include inquiry, survey, research, brainstorming, canvassing, consultation, review, interview, observe, experiment, design, 
-test, document, etc.  The methodology also includes the following information:
+The research will be divided into the following phases:
+\begin{enumerate}
+\item Gathering of Data
+\item Research and Comparison
+\item Implementation of the Software
+\item Testing and Evaluation of the Software
+\item Analyzing the Effectivity and Usefulness of the Software
+\end{enumerate}
 
-\begin{itemize}
-   \item who is responsible for the task
-   \item the resource person to be contacted
-   \item what will be done
-   \item when and how long will the activity be done
-   \item where will it be done
-   \item why should be activity be done
-\end{itemize}
+\subsection{Gathering of Data}
+The appropriate literatures--scalar feedback, visual appeal, speech training systems--are to be gathered in order to implement an effective speech training software. Several textbooks and journals are available in the institution where the group is studying in. The group also has to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech training software.
 
+\subsection{Research and Comparison}
+After having gathered data, the group is then tasked to research and compare different literatures and ideas. There are several ways of providing visual and scalar feedback to users, however the group should only select the more effective ways of providing visual and scalar feedback. With this, it is important to look behind the science of these visual feedback and how effective they are.
+
+There are several speech training software created by different companies. IBM, for one, created SpeechViewer which is used by speech  therapists to train the hearing-impaired. The software provides a feature wherein the therapist can record training sessions in order to see the improvements of his or her patients. Though the software may be outdated, it may serve as a reference on how a speech training process works. Motivation is very important in speech training. If the software appears to be dull and boring, the user may have the lack of will to learn and develop. The proposed speech training software the group will implement must be educational, motivating, and effective. Viewing other speech training software may help the thesis group gather ideas in order to create such that.
+
+\subsection{Implementation of the Software}
+The speech training software will be implemented such that it should be appealing and functional. Also, the software must be effective and easy to use. The mapping software of Natalie Agustin \citeyear{agustin:2014:SOM} will be integrated into the speech training software in order to recognize voice input and provide the corresponding mapping which determines the vowel sound that was spoken by the user.
+
+\subsection{Testing and Evaluation of the Software}
+To determine how effective the implemented software is, the researchers are going to have the program tested by the hearing-impaired. The researchers would like to know if the software is good in terms of usability, effectivity, design, and motivating. This way, the researchers will know how to further improve the software.
+
+\subsection{Analysis of Results}
+The researchers will analyze how helpful and effective the speech training software is through surveys and interviews with their testers. As mentioned in the previous subsection, the researchers will ask how usable and effective the program is and if the program is appealing and motivating.
 
 \section{Calendar of Activities}
 
-A Gantt chart showing the schedule of the activities should be included as a table. For example:
-
-Table \ref{tab:timetableactivities} shows a Gantt chart of the activities.  Each bullet represents approximately
-one week worth of activity.
+%Table \ref{tab:timetableactivities} shows a Gantt chart of the activities. Each bullet represents approximately one week worth of activity.
+Table 3.1 shows a Gantt chart of the activities. Each bullet represents approximately one week worth of activity.
 
 %
 %  the following commands will be used for filling up the bullets in the Gantt chart
@@ -56,14 +65,13 @@ one week worth of activity.
 \centering
 \caption{Timetable of Activities} \vspace{0.25em}
 \begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|} \hline
-\centering Activities (2009) & Jan   & Feb & Mar & Apr & May & Jun & Jul \\ \hline
-Study on Prerequisite Knowledge      &   &  & ~~~\weektwo & \weekfour &  &  &  \\ \hline
-Review of Existing Racing Strategies & ~~~\weektwo  & \weekfour & \weekfour & \weekfour &  &  &  \\ \hline
-Identification of Best Features      &   &  &  & \weekfour & \weektwo~~~ &  &  \\ \hline
-Development of Racing Strategies     &   &  &  & ~~~\weektwo & \weekfour & \weektwo~~~ &  \\ \hline
-Simulation of Racing Strategies      &   &  &  & ~~~\weektwo & \weekfour & \weekthree~~ &  \\ \hline
-Analysis and Interpretation of the Results &   &  &  &  & \weekfour & \weekfour & \weekone~~~~~ \\ \hline
-Documentation & ~~~\weektwo  & \weekfour & \weekfour & \weekfour & \weekfour & \weekfour & \weektwo~~~ \\ \hline
+\centering Activities (2015) & Sep & Oct & Nov & Dec & Jan & Feb & Mar \\ \hline
+Gathering of Data      & ~~~\weektwo & \weekfour &  &  &  &  &  \\ \hline
+Research and Comparison &   & ~~~\weektwo & \weekfour &  &  &  &  \\ \hline
+Implementation of the Software      &   &  & ~~~\weektwo & \weektwo~~~ &  ~~\weekthree &  &  \\ \hline
+Testing and Evaluation of the Software     &   &  &  &  & ~~~\weektwo & \weekfour &  \\ \hline
+Analysis of Results      &   &  &  &  &  &  & \weekfour \\ \hline
+Documentation & ~~~\weektwo  & \weekfour & \weekfour & \weektwo~~~ & ~~\weekthree & \weekfour & \weekfour \\ \hline
 \end{tabular}
 \label{tab:timetableactivities}
 \end{table}
