--- a/abstract.tex
+++ b/abstract.tex
@@ -7,21 +7,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-From 150 to 200 words of short, direct and complete sentences, the abstract should be informative enough to serve as a substitute for reading the thesis itself.  It states the 
-rationale and the objectives of the research.  In STTHES3, i.e., final thesis stage, the 
-abstract should also contain a description of your research results/findings/contribution(s).
-
-%
-%  Do not put citations or quotes in the abract.
-%
-
-  
-Keywords can be found at \url{http://www.acm.org/about/class/1998/}.  Click the link to 
-``single HTML document'' or ``browsable HTML document...''.
+The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The authors of this paper are tasked to create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to different sounds. The speech training software will be limited to support only vowel sounds.
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
-\hspace{-0.5em}\textbf{Keywords:}\hspace{0.25em} & Keyword 1, keyword 2, keyword 3, keyword 4, etc.\\
+\hspace{-0.5em}\textbf{Keywords:}\hspace{0.25em} & visual feedback, speech training system, hearing-impaired
 \end{tabular}
 \end{flushleft}
 \end{abstract}
