--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 
 \include{title_page}              %-- includes LaTeX source file for the Title Page 
                                   %-- your job: **EDIT THIS FILE ** to indicate your own title, name, and thesis adviser's name
+\include{abstract}
 
 \pagenumbering{roman}             %-- this will number pages as i, ii, iii, etc...
 \setcounter{page}{2}
@@ -54,7 +55,7 @@
 \include{chapter_1}
 \include{chapter_2}               %-- includes LaTeX source file for Chapter 1: Research Description
                                   %-- your job: **EDIT THIS FILE** to indicate your own research description
-
+\include{chapter_3}
 
 
 \bibliography{ourreferences}       %-- the file "myreferences.bib" is a sample bibliography (bib) from SIGGRAPH 
