Modified abstract and chap 1

--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -10,9 +10,9 @@ Hearing impairment is the inability to hear, and it may affect one's development
 
 \begin{comment}
 Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
-\end{comment}
 
 One problem of a hearing-impaired student is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
+\end{comment}
 
 Early speech training software were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
@@ -40,7 +40,7 @@ To implement a speech training software that provides visual feedback which assi
 \item To find schools for the hearing-impaired who may assist the group with the research
 \item To identify and compare different methods of visual feedback in speech training systems
 \item To select the optimal visual feedback method based on usability and effectiveness
-\item To review Natalie Agustin's \citeyear{agustin:2014:SOM} mapping software which will be integrated into the speech training software
+\item To review Natalie Agustin's \citeyear{agustin:2014:SOM} master's thesis, a mapping program which will be integrated into the speech training software
 \item To determine the different methods in motivating the hearing-impaired in using the speech training software
 \item To evaluate the accuracy of the speech training software's visual feedback based on the user's voice input
 \end{enumerate}
