--- a/abstract.tex
+++ b/abstract.tex
@@ -7,11 +7,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The authors of this paper are tasked to create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to different sounds. The speech training software will be limited to support only vowel sounds.
+The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The authors of this paper are tasked to create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to speaking different sounds. The speech training software will be limited to support only vowel sounds.
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
-\hspace{-0.5em}\textbf{Keywords:}\hspace{0.25em} & visual feedback, speech training system, hearing-impaired
+\hspace{-0.5em}\textbf{Keywords:}\hspace{0.25em} & visual feedback, speech training system, hearing-impairment
 \end{tabular}
 \end{flushleft}
 \end{abstract}
