Modified based on Doc Bong's comments
Still lacking:
- Summary of Literatures
- Incorrect GANTT Chart (not in line with our terms' months)
- Make scope and limitation per research objective
- What is SOM for in the context of your research?

--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The authors of this paper are tasked to create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to speaking different sounds. The speech training software will be limited to support only vowel sounds.
+The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The proponents will create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to speaking different sounds. The speech training software will be limited to supporting only vowel sounds.
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
