--- a/chapter_1_rev1.tex
+++ b/chapter_1_rev1.tex
@@ -16,7 +16,7 @@ One problem a hearing-impaired student going under therapy may undergo is the la
 
 Early speech training systems were implemented using a lipreading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
-Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude—the degree of change—on the x-axis \cite{bernstein:1988:STA}.
+Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}.
 
 Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with the cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
 
