--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -10,7 +10,7 @@
 This chapter discusses the methodology to be followed for the entire duration of this research.
 
 \section{Research Activities}
-The research will be divided into the following phases:
+The research activities will be divided into the following phases:
 \begin{enumerate}
 \item Gathering of Data
 \item Research and Comparison
@@ -20,10 +20,10 @@ The research will be divided into the following phases:
 \end{enumerate}
 
 \subsection{Gathering of Data}
-The appropriate literatures--scalar feedback, visual appeal, speech training systems--are to be gathered in order to implement an effective speech training software. Several textbooks and journals are available in the institution where the group is studying in. The group also has to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech training software.
+The appropriate literatures--scalar feedback, visual appeal, speech training systems--are to be gathered in order to design and implement an effective speech training software. Several textbooks and journals are available in the institution where the group is studying in. The group also has to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech training software.
 
 \subsection{Research and Comparison}
-After having gathered data, the group is then tasked to research and compare different literatures and ideas. There are several ways of providing visual and scalar feedback to users, however the group should only select the more effective ways of providing visual and scalar feedback. With this, it is important to look behind the science of these visual feedback and how effective they are.
+After having gathered data, the group is then tasked to research and compare different literatures and ideas. There are several ways of providing visual and scalar feedback to users. However the group should only select the more effective ways of providing visual and scalar feedback. With this, it is important to look behind the science of these visual feedback and how effective they are.
 
 There are several speech training software created by different companies. IBM, for one, created SpeechViewer which is used by speech  therapists to train the hearing-impaired. The software provides a feature wherein the therapist can record training sessions in order to see the improvements of his or her patients. Though the software may be outdated, it may serve as a reference on how a speech training process works. Motivation is very important in speech training. If the software appears to be dull and boring, the user may have the lack of will to learn and develop. The proposed speech training software the group will implement must be educational, motivating, and effective. Viewing other speech training software may help the thesis group gather ideas in order to create such that.
 
