--- a/ourreferences.bib
+++ b/ourreferences.bib
@@ -104,23 +104,33 @@
 	howpublished = "\url{http://www.sutd.edu.sg/cmsresource/idc/papers/2012_The_Haptic_Chair_as_a_Speech_Training_Aid_for_the_Deaf.pdf}",
 }
 
-@misc{kennedy:nd:spv,
+@misc{kennedy:1998:spv,
   title = {Speech Viewer 3 Review},
   author = {Gerry Kennedy},
+  year = 1998,
   howpublished = {\url{http://www.spectronics.com.au/article/3073}},
   note = {Accessed March 16, 2015}
 }
 
-@misc{speechville:nd:slp,
+@misc{speechville:2014:slp,
 	title = {Software: for Speech-language Pathology},
 	author = {Speechville},
+	year = 2014,
 	howpublished = {\url{http://www.speechville.com/speech-therapy/software-slps.html}},
 	note = {Accessed March 16, 2015}
 }
 
-@misc{drspeech:nd:st5,
+@misc{drspeech:1998:st5,
 	title = {Speech Therapy 5},
 	author = {Tiger DRS, Inc.},
+	year = 1998,
 	howpublished = {\url{http://www.drspeech.com/SpeechTherapy5.html}},
 	note = {Accessed March 16, 2015}
+}
+
+@article{kohonen:1988:pho,
+	title = "The 'neural' Phonetic Typewriter",
+	author = "T Kohonen",
+	year = 1988,
+	journal = "Computer"
 }
