--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -16,13 +16,13 @@ One problem of a hearing-impaired student is the lack of access to speech traini
 
 Early speech training software were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
-Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude—the degree of change—on the x-axis \cite{bernstein:1988:STA}.
+Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of such games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}.
 
 Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells, or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with a cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
 					
 Computer-based speech therapy systems that have been implemented are mostly product-oriented, providing an analysis of the input of the user and the final result. The method, however, does not provide the information of how the sound should be articulated. The shortcoming of these systems are brought upon by giving visual representations in real time i.e. game-like visualizations and speech pictures \cite{oster:2006:cbs}.
 									
-Moreover, in training hearing-impaired children, the most preferred feedback is through visual modality. This allows the children see the motor gestures that were non-visible, assisting them in developing their speech gestures. The problem that this method posed was that it were seldom evaluated in a pedagogical programme. Often, the visual aids presented was difficult to understand, unnatural, delayed, unattractive, and had no motivational impact on the children \cite{oster:2006:cbs}.
+Moreover, in training hearing-impaired children, the most preferred feedback is through visual modality. This allows the children see the motor gestures that were non-visible, assisting them in developing their speech gestures. The problem that this method posed was that it was seldom evaluated in a pedagogical programme. Often, the visual aids presented was difficult to understand, unnatural, delayed, unattractive, and had no motivational impact on the children \cite{oster:2006:cbs}.
 				
 \section{Research Objectives}
 \label{sec:researchobjectives}
@@ -30,14 +30,14 @@ Moreover, in training hearing-impaired children, the most preferred feedback is 
 \subsection{General Objective}
 \label{sec:generalobjective}
 
-To implement a speech training software that provides visual feedback which assists people with hearing impairment to learn how to speak vowel sounds.
+To implement a speech training software that provides visual feedback to assist people with hearing impairment in order to learn how to speak vowel sounds.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
 \begin{enumerate}
 \item To study how previous and current speech training programs work
-\item To find schools for the hearing-impaired who may assist the group with the research
+\item To find Deaf schools who may assist the proponents with the research
 \item To identify and compare different methods of visual feedback in speech training systems
 \item To select the optimal visual feedback method based on usability and effectiveness
 \item To review Natalie Agustin's \citeyear{agustin:2014:SOM} master's thesis, a mapping program which will be integrated into the speech training software
@@ -48,12 +48,12 @@ To implement a speech training software that provides visual feedback which assi
 \section{Scope and Limitations of the Research}
 \label{sec:scopelimitations}
 
-For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation—the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
+For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation---the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
 The speech training software will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
 The speech training software will run on a desktop platform, as desktop computers are accessible and widely-used.
 
 \section{Significance of the Research}
 \label{sec:significance}
 
-The thesis will assist the Deaf in learning the pronunciations of vowel sounds accurately. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
+The thesis will assist the Deaf in learning the pronunciations of vowel sounds correctly. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
 The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
